--- a/WALKER.styles.css
+++ b/WALKER.styles.css
@@ -311,7 +311,7 @@ img{
 
 /* ---------- ADJUSTING RESPONSIVE IMAGE SIZE ---------- */
 /* --------------- BEGIN RESPONSIVE IMAGE ADJUST SIZES --------------- */
-@media only screen and (min-resolution: 192dpi) {
+@media only screen and (min-resolution: 192dpi), (min-width: 1380px) {
     img{
         width: 300px;
         max-width: 300px;
